<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="progress_download_geocaches">Downloading caches…</string>
    <string name="error_locus_not_found">Locus Map application was not found, but Geocaching4Locus requires it to work properly. Please install Locus Map.</string>
    <string name="error_location_disabled">Please allow Wireless or GPS location service in ‘Settings’.</string>
    <string name="progress_acquire_gps_location">Acquiring location from GPS…</string>
    <string name="progress_acquire_network_location">Acquiring location from wireless network…</string>
    <string name="action_settings">Settings</string>
    <string name="error_coordinates_format">Wrong coordinates format!</string>
    <string name="title_coordinates">Coordinates</string>
    <string name="pref_distance">Distance</string>
    <string name="pref_distance_summary_km">Distance in km</string>
    <string name="pref_distance_summary_miles">Distance in miles</string>
    <string name="pref_imperial_units">Imperial units</string>
    <string name="pref_imperial_units_summary">Use miles instead of kilometers</string>
    <string name="error_no_account">You are not signed in. Please sign in first in account settings.</string>
    <string name="button_ok">OK</string>
    <string name="error_old_locus_map">Your installed version of Locus Map is too old. Geocaching4Locus require version %s or greater to work properly.</string>
    <string name="button_cancel">Cancel</string>
    <string name="pref_show_found">Show found</string>
    <string name="pref_show_found_summary">Show found caches</string>
    <string name="pref_show_own">Show own hidden</string>
    <string name="pref_show_own_summary">Show own caches (hidden by you)</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="progress_update_geocache">Updating cache…</string>
    <string name="pref_logs_count">Count of logs</string>
    <string name="pref_logs_count_summary">Count of logs to download with cache</string>
    <string name="button_gps">GPS</string>
    <string name="pref_show_disabled">Show disabled</string>
    <string name="pref_show_disabled_summary">Show temporarily disabled caches</string>
    <string name="progress_import_geocache">Downloading cache…</string>
    <string name="pref_version">Version</string>
    <string name="pref_website">Website, forum, etc.</string>
    <string name="pref_donate_paypal">Donate via Paypal</string>
    <string name="pref_donate_paypal_summary">Support the future development…</string>
    <string name="pref_donate_paypal_choose_currency">Choose your currency</string>
    <string name="pref_geocache_type">Cache types</string>
    <string name="pref_difficulty">Difficulty</string>
    <string name="pref_terrain">Terrain</string>
    <string name="pref_difficulty_min">Min. difficulty</string>
    <string name="pref_difficulty_max">Max. difficulty</string>
    <string name="pref_terrain_min">Min. terrain</string>
    <string name="pref_terrain_max">Max. terrain</string>
    <string name="pref_download_basic">Basic info only</string>
    <string name="pref_download_basic_summary">Download only basic information about cache</string>
    <string name="pref_download_on_show">Download rest info on show</string>
    <string name="pref_download_on_show_summary">Download rest information about cache when the cache content is shown in Locus Map</string>
    <string-array name="pref_download_on_show_entries">
        <item>once</item>
        <item>every</item>
        <item>never</item>
    </string-array>
    <string name="menu_live_map">Live map</string>
    <string name="menu_nearest">Nearest</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_settings">Settings</string>
    <string name="var_user_waypoint_name">User waypoint %1$d</string>
    <string name="var_final_location_name">Final location</string>
    <string name="pref_login">Sign in</string>
    <string name="pref_login_summary">Sign in to Geocaching.com account</string>
    <string name="pref_logout">Sign out</string>
    <string name="pref_logout_summary">Signed in as %s</string>
    <string name="error_network_unavailable">Network unavailable. Please check your connection.</string>
    <string name="progress_update_geocaches">Updating caches…</string>
    <string name="var_original_coordinates_name">Original coordinates</string>
    <string name="pref_container_size">Container size</string>
    <string name="toast_live_map_enabled">Live map enabled. Now move with map to see caches.</string>
    <string name="toast_live_map_disabled">Live map disabled.</string>
    <string name="error_live_map_periodic_updates">You do not have allowed sending Periodic updates from Locus Map. Please, enable it first in Locus Map under: Settings → Miscellaneous → Enable periodic updates for Add-on.</string>
    <string name="error_location_not_allowed">No location service allowed</string>
    <string name="button_settings">Settings</string>
    <string name="menu_import_from_gc">Import GC</string>
    <string name="title_import_from_gc">Import from GC code</string>
    <string name="error_gc_code_invalid">GC code is not valid.</string>
    <string name="error_geocache_not_found">Cache %s was not found.</string>
    <string name="title_geocache_count">Count of caches</string>
    <string name="launcher_nearest_geocaches">Nearest caches</string>
    <string name="launcher_import_geocache">Import cache to Locus Map</string>
    <string name="launcher_update_geocache">Update cache</string>
    <string name="launcher_update_geocaches">Update caches</string>
    <string name="launcher_import_from_gc">Import from GC code</string>
    <string name="title_basic_member_warning">Basic member access</string>
    <string name="title_premium_member_warning">Premium member access</string>
    <string name="error_basic_member_full_geocaching_quota_exceeded">You reached the limit for downloading full details of <b>%1$s per %2$s period</b>. Your daily quota will be reset at %3$s.<br/>
        <br/>
        <i>Upgrade to geocaching.com premium membership today to download the full details for up to 6000 caches per day and access many more benefits. Visit geocaching.com to upgrade.</i></string>
    <string name="error_premium_member_full_geocaching_quota_exceeded">You reached the limit for downloading full details of <b>6000 caches per 24 hours period</b>. Your daily quota will be reset at %3$s.</string>
    <string name="title_method_quota_exceeded">Hey, slow down!</string>
    <string name="error_method_quota_exceeded">You reached the limit for maximum actions/calls per minute period.</string>
    <plurals name="plurals_geocache">
        <item quantity="one">%d cache</item>
        <item quantity="few">%d caches</item>
        <item quantity="other">%d caches</item>
    </plurals>
    <plurals name="plurals_hour">
        <item quantity="one">%d hour</item>
        <item quantity="few">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="plurals_minute">
        <item quantity="one">%d minute</item>
        <item quantity="few">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="pref_geocaching_live">Powered by Geocaching Live</string>
    <string name="pref_geocaching_live_message">This add-on use Geocaching Live for getting information about geocaches. Tap here for more information…</string>
    <string name="error_invalid_api_response">Geocaching Live returns invalid response:<br/>%s</string>
    <string name="notify_live_map">Geocaching4Locus Live map</string>
    <string name="notify_live_map_message_enabled">Live map is enabled.</string>
    <string name="notify_live_map_message_disabled">Live map is disabled.</string>
    <string name="notify_live_map_message_downloading">Downloading Live map caches: %1$d / %2$d (%3$d%%)</string>
    <string name="notify_live_map_action_enable">Enable</string>
    <string name="notify_live_map_action_disable">Disable</string>
    <string name="notify_live_map_action_settings">Settings</string>
    <string name="error_live_map">Geocaching4Locus Live map: %s</string>
    <string name="pref_disabled_notification">Disabled notification</string>
    <string name="pref_disabled_notification_summary">Show notification when Live map is disabled. This works only if the periodic updates are allowed in Locus Map and Locus Map is running.</string>
    <string name="pref_geocache_type_all">All</string>
    <string name="button_filter">Filter</string>
    <string name="progress_download_logs">Downloading logs…</string>
    <string name="launcher_download_logs">Download logs</string>
    <string name="pref_download_logs_update_geocache">Download logs update cache</string>
    <string name="pref_download_logs_update_geocache_summary">Action “Download logs” also update geocache data</string>
    <string name="pref_step_geocaching_count">Step size for Count of caches</string>
    <string name="pref_step_geocaching_count_summary">Change a step size for count of caches choose dialog</string>
    <string name="error_premium_filter">Some filters require premium member account which you does not have it. The app is switched now to mode for basic users. Please try it again.</string>
    <string name="pref_account" comment="Title of category preference for Account settings."
        >Account</string>
    <string name="pref_filter" comment="Title of category preference for Filter settings."
        >Filter</string>
    <string name="pref_live_map" comment="Title of category preference for Live Map settings."
        >Live map</string>
    <string name="pref_downloading" comment="Title of category preference for Downloading settings."
        >Downloading</string>
    <string name="pref_advanced" comment="Title of category preference for Advanced settings."
        >Advanced</string>
    <string name="pref_about" comment="Title of category preference for About settings."
        >About</string>
    <string name="pref_download_hints" comment="Title of checkbox preference in Live Map settings."
        >Download hints</string>
    <string name="pref_download_hints_summary" comment="Summary of checkbox preference in Live Map settings."
        >Slower loading and more demanding on data usage</string>
    <string name="menu_import_bookmarks" comment="Dashboard button which show window for importing geocaches from bookmarks."
        >Import bookmarks</string>
    <string name="pref_hide_geocaches_on_disabled" comment="Title of checkbox preference in Live Map settings. Marking this checkbox will cause to hides all Live Map geocaches in Locus Map after Live Map feature is disabled."
        >Hide geocaches on disabled</string>
    <string name="pref_hide_geocaches_on_disabled_summary" content="Summary of checkbox preference in Live Map settings. Marking this checkbox will cause to hides all Live Map geocaches in Locus Map after Live Map feature is disabled."
        >Hide Live map geocaches when Live map feature is disabled</string>
    <string name="pref_disable_dnf_nm_na_geocaches" comment="Title of checkbox preference in Downloading settings. Marking this checkbox will cause to mark geocache as not available with more Did Not Fond, Needs Maintenance or Need Archived logs."
        >Disable DNF, NM and NA caches</string>
    <string name="pref_disable_dnf_nm_na_geocaches_summary" comment="Summary of checkbox preference in Downloading settings. Marking this checkbox will cause to mark geocache as not available with more Did Not Fond, Needs Maintenance or Need Archived logs."
        >Mark geocache as not available when contains more <i>Did Not Found</i>, <i>Needs Maintenance</i> or <i>Needs Archived</i> logs</string>
</resources>