<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="com.arcao.geocaching4locus.DashboardActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        style="@style/ScreenContainer"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_live_map"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_live_map_48dp"
                android:text="@string/menu_live_map"
                app:toggleable="true"/>

            <ImageView style="@style/SeparatorVertical.Dark" />

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_import_gc"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_gc_input_48dp"
                android:text="@string/menu_import_from_gc" />

            <ImageView style="@style/SeparatorVertical.Dark" />

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_search_nearest"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_search_48dp"
                android:text="@string/menu_nearest" />
        </LinearLayout>

        <ImageView style="@style/SeparatorHorizontal.Dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_import_bookmark"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_bookmark_border_48dp"
                android:text="@string/menu_import_bookmarks" />

            <ImageView style="@style/SeparatorVertical.Dark" />

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_preferences"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_settings_48dp"
                android:text="@string/menu_preferences" />

            <ImageView style="@style/SeparatorVertical.Dark" />

            <com.arcao.geocaching4locus.widget.DashboardButton
                android:id="@+id/db_manual"
                style="@style/MainMenuButton"
                android:drawableTop="@drawable/ic_help_48dp"
                android:text="@string/menu_manual" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>